# RealLoader

./: .gitignore  BuildProject.bat  C++WindowsBuild.sln  CMakeLists.txt  IGNORE_THIS.sln  PalworldManagedModFramework.sln  README.md  RealLoader.sln  azure-pipelines.yml  premake5.lua
Bootstrapping/: FindNethost.sh  GetNetHostEnvironmentVariable.ps1
Bootstrapping/CLRHost/: CLRHost.vcxproj  CLRHost.vcxproj.filters  CMakeLists.txt  dotnet_path.props
Bootstrapping/CLRHost/src/: CLR.hpp  main.cpp
Bootstrapping/CLRHost/src/Util/: Logger.hpp  String.hpp
Bootstrapping/VersionProxyDll/: DLLMain.c  DLLMain.h  version Proxy.vcxproj  versionStubExports.h
Bootstrapping/WinHttpProxyDll/: DLLMain.c  winhttp Proxy.vcxproj  winhttpASMStubs.asm  winhttpStubExports.h
CLRHost/: CLRHost.vcxproj  CLRHost.vcxproj.filters  CMakeLists.txt
CLRHost/src/: CLR.hpp  main.cpp
Common/Cpp/: String.hpp
Docs/RoadMap/: README.md
DotNetSdkBuilderMod/: DotNetSdkBuilderMod.csproj  SdkBuilder.cs  SdkBuilderConfig.json
DotNetSdkBuilderMod/AssemblyBuilding/: SourceCodeGenerator.cs
DotNetSdkBuilderMod/Extensions/: StringBuilderExtensions.cs
Engine_5.1.1/: UEngine_5.1.1.csproj
Engine_5.1.1/CoreUObject/: FGCReferenceTokenStream.cs  TArray.cs
ExampleMod/: ExampleMod.csproj  README.md  Sample.cs
ExampleServerMod/: ExampleServerMod.cs  ExampleServerMod.csproj
Framework/RealLoaderFramework/: AppDomainMonitor.cs  AppSettings.json  ConsoleExtensions.cs  Program.cs  RealLoaderFramework.csproj
Framework/RealLoaderFramework.Sdk/: AssemblyInfo.cs  RealLoaderFramework.Sdk.csproj
Mods/DotNetSdkBuilderMod/: DotNetSdkBuilderMod.csproj  SdkBuilder.cs  SdkBuilderConfig.json
Mods/ExampleMod/: ExampleMod.csproj  README.md  Sample.cs
Mods/ExampleServerMod/: ExampleServerMod.cs  ExampleServerMod.csproj
PalModManagerJunk/: PalModManager.sln
PalModManagerJunk/DotNetLib/: Lib.cs
PalModManagerJunk/PMMBootstrapper/: PMMBootstrapper.vcxproj.filters
PalWorldManagedModFramework.EntryPoint/: Bootstrapper.vcxproj  PMMBootstrapper.vcxproj  PMMBootstrapper.vcxproj.filters
PalWorldManagedModFramework.EntryPoint/src/: main.cpp
PalwordManagerModFramework.EntryPoint/: PMMBootstrapper.vcxproj
PalwordManagerModFramework.EntryPoint/src/: main.cpp
PalworldManagedModFramework/: AppDomainMonitor.cs  AppSettings.json  ConsoleExtensions.cs  PalworldManagedModFramework.csproj  Program.cs
PalworldManagedModFramework.EntryPoint/: CLR.cpp  CLR.hpp  PalworldManagedModFramework.EntryPoint.cpp  PalworldManagedModFramework.EntryPoint.vcxproj  PalworldManagedModFramework.EntryPoint.vcxproj.filters  coreclrhost.h
PalworldManagedModFramework.PalWorldSdk/: AssemblyInfo.cs  PalworldManagedModFramework.PalWorldSdk.csproj  PalworldManagedModFramework.Sdk.csproj
PalworldManagedModFramework.PalWorldSdk.Tests/: PalworldManagedModFramework.PalWorldSdk.Tests.csproj  PalworldManagedModFramework.Sdk.Tests.csproj
PalworldManagedModFramework.PalWorldSdk/Attributes/: DetourAttribute.cs  EngineEventAttribute.cs  HookAttribute.cs  HookEngineEventAttribute.cs  MachineCodePatternAttribute.cs  PalworldModAttribute.cs  SequencePatternAttribute.cs  UnrealEventAttribute.cs
PalworldManagedModFramework.PalWorldSdk/Interfaces/: ICreatableUObject.cs  IPalworldMod.cs  ISbStartup.cs
PalworldManagedModFramework.PalWorldSdk/Logging/: ILogger.cs  Logger.cs  LoggerConfig.cs
PalworldManagedModFramework.PalWorldSdk/Models/: FullTypePathAttribute.cs  OriginalMemberNameAttribute.cs  OriginalTypeNameAttribute.cs  UObjectInterop.cs
PalworldManagedModFramework.PalWorldSdk/Services/: DebugUtilities.cs  GlobalObjects.cs  NamePoolService.cs  SequenceScanner.cs  ServiceProviderExtensions.cs  UObjectFactory.cs  UnrealHook.cs  UnrealReflection.cs
PalworldManagedModFramework.Tests/: PalworldManagedModFramework.Tests.csproj
PalworldManagedModFramework.UnrealSdk/: PalworldManagedModFramework.UnrealSdk.csproj
PalworldManagedModFramework.UnrealSdk/Services/: GlobalObjects.cs  NamePoolService.cs  UnrealReflection.cs
PalworldManagedModFramework/Attributes/: MachineCodePatternAttribute.cs
PalworldManagedModFramework/DI/: Startup.cs
PalworldManagedModFramework/Models/: ClrMod.cs
PalworldManagedModFramework/Services/: GameExplorer.cs  RuntimeInstaller.cs
PalworldModInstaller/: AssemblyInfo.cs  PalworldModInstaller.csproj  Program.cs
PalworldModInstaller.Tests/: PalworldModInstaller.Tests.csproj
PalworldModInstaller/Commands/: InstallCommand.cs
PalworldModInstaller/DI/: TypeRegistrar.cs  TypeResolver.cs
PalworldModInstaller/Models/: InstallerOptions.cs
PalworldModInstaller/Services/: GithubArtifactDownloader.cs  IInstaller.cs  Installer.cs  LinuxInstaller.cs  ModBackupService.cs  ModFileService.cs  WindowsInstaller.cs
RealLoader.UnrealEngine/: NativeType.cs
RealLoader.UnrealEngine/CoreUObject/: UClassRef.cs  UFieldRef.cs  UStructRef.cs
RealLoader.UnrealEngine/EngineServices/: GlobalObjects.cs  PropertyRegistrationService.cs  ServiceProviderExtensions.cs  UObjectFactory.cs  UnrealReflection.cs
RealLoaderGuiInstaller/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  RealLoaderGuiInstaller.csproj
RealLoaderGuiInstaller/Services/: UEGameSearch.cs
Tests/RealLoaderFramework.Sdk.Tests/: RealLoaderFramework.Sdk.Tests.csproj
Tests/RealLoaderFramework.Tests/: RealLoaderFramework.Tests.csproj
Tests/RealLoaderInstaller.Tests/: RealLoaderInstaller.Tests.csproj
Tests/Shared.SystemUnderTest/: Shared.SystemUnderTest.csproj  SpecAutoMocker.cs
Tools/RealLoaderGuiInstaller/: MainWindow.axaml  RealLoaderGuiInstaller.csproj  app.manifest
Tools/RealLoaderInstaller/: AssemblyInfo.cs  Program.cs  RealLoaderInstaller.csproj
Tools/UnrealCoreObjectApiSourceGen/: MakeFileIncludes.txt  Program.cs  UnrealCoreObjectApiSourceGen.csproj
UnrealCoreObjectApiSourceGen/: Appsettings.json  Program.cs
UnrealCoreObjectApiSourceGen/DI/: Startup.cs
VersionProxyDll/: DLLMain.c  version Proxy.vcxproj  versionASMStubs.asm
Wiki/RoadMap/: README.md
WinHttpProxyDll/: DLLMain.c  winhttp Proxy.vcxproj
(+803 files in other folders)
